updated docker image
now includes python filelock

--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM ubuntu:14.04
 RUN sudo apt-get update&&sudo apt-get install python python-pip git curl -y
-RUN python -m pip install websocket-client
+RUN python -m pip install websocket-client filelock
 ENTRYPOINT git clone https://github.com/VSquidDevV/twitch-market; cd twitch-market; python twitch-market.py
